--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: test
-        run: echo "${{ secrets.TEST }}"
+        run: echo "${{ secrets.TEST }}" | wc -c
 
       - name: Add SSH private key
         run: |
