--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,10 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: test
-        run: echo "${{ secrets.TEST }}" | wc -c
-
       - name: Add SSH private key
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.EC2_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.EC2_KEY }}" | base64 -d > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
       - name: Add known hosts
