--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - '3456:3456'
+    env_file:
+      - .env
     volumes:
       - .:/app
       - /app/node_modules
