--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,9 @@ jobs:
         run: |
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Copy env file
-        run: scp -i ~/.ssh/id_rsa server/.env ubuntu@${{ secrets.EC2_HOST }}:/home/ubuntu/server/.env
+      - name: Create .env file
+        run: |
+          echo "${{ secrets.ENV_FILE }}" > .env
 
       - name: Copy files to EC2
         run: |
